Enhance feedback form with validation and custom submission logic

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 
 <main>
     <h2>Feedback Form</h2>
-    <form action="#" method="post">
+    <!-- <form action="#" method="post" onsubmit="return customSubmitHandler()" novalidate> -->
+    <form action="#" method="post" onsubmit="return customSubmitHandler()" >
         <!-- Name Input -->
         <div class="form-group">
             <label for="name">Full Name:</label>
@@ -70,13 +71,13 @@
         <!-- Email Input -->
         <div class="form-group">
             <label for="email">Email Address:</label>
-            <input type="email" id="email" name="email" placeholder="Enter your email" required>
+            <input type="email" id="email" name="email" placeholder="Enter your email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>
         </div>
 
         <!-- Password Input -->
         <div class="form-group">
             <label for="password">Password:</label>
-            <input type="password" id="password" name="password" placeholder="Enter a strong password" required>
+            <input type="password" id="password" name="password" placeholder="Enter a strong password" minlength="8" required>
         </div>
 
         <!-- Date Picker -->
@@ -94,7 +95,7 @@
         <!-- Dropdown List -->
         <div class="form-group">
             <label for="service">Service Used:</label>
-            <select id="service" name="service">
+            <select id="service" name="service" required>
                 <option value="">--Select--</option>
                 <option value="consulting">Consulting</option>
                 <option value="support">Support</option>
@@ -116,7 +117,7 @@
         <!-- Radio Button Group -->
         <div class="form-group">
             <label>Would you recommend us?</label><br>
-            <input type="radio" id="recommend-yes" name="recommend" value="yes">
+            <input type="radio" id="recommend-yes" name="recommend" value="yes" required>
             <label for="recommend-yes">Yes</label><br>
             <input type="radio" id="recommend-no" name="recommend" value="no">
             <label for="recommend-no">No</label>
@@ -125,19 +126,19 @@
         <!-- File Upload -->
         <div class="form-group">
             <label for="upload">Upload Supporting Document:</label>
-            <input type="file" id="upload" name="upload">
+            <input type="file" id="upload" name="upload" multiple>
         </div>
 
         <!-- Text Area -->
         <div class="form-group">
             <label for="feedback">Feedback:</label>
-            <textarea id="feedback" name="feedback" rows="5" placeholder="Enter your feedback here..."></textarea>
+            <textarea id="feedback" name="feedback" rows="5" placeholder="Enter your feedback here..." maxlength="500"></textarea>
         </div>
 
         <!-- Range Input -->
         <div class="form-group">
             <label for="rating">Rate Our Services:</label>
-            <input type="range" id="rating" name="rating" min="1" max="10">
+            <input type="range" id="rating" name="rating" min="1" max="10" step="1">
         </div>
 
         <!-- Color Picker -->
@@ -152,6 +153,14 @@
         <!-- Submit Button -->
         <button type="submit">Submit</button>
     </form>
+
+    <script>
+        function customSubmitHandler() {
+            // Custom form submission logic
+            alert('Form submitted!');
+            return false; // Prevent default form submission
+        }
+    </script>
 </main>
 
 </body>
