Update feedback form to use GET method

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <main>
     <h2>Feedback Form</h2>
     <!-- <form action="#" method="post" onsubmit="return customSubmitHandler()" novalidate> -->
-    <form action="#" method="post" onsubmit="return customSubmitHandler()" >
+    <form action="#" method="get" novalidate >
         <!-- Name Input -->
         <div class="form-group">
             <label for="name">Full Name:</label>
